<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercice1"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countLabel"
        android:text="@string/count_label"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answerBtn1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button2"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer"
        app:backgroundTint="#FF9800" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answerBtn2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button2"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer"
        app:backgroundTint="#FF9800" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answerBtn3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button2"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer"
        app:backgroundTint="#FF9800" />
</LinearLayout>